@@ -12,6 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+#pragma ident "@(#) $Id: heur_mutation.c,v 1.54 2011/02/18 13:49:40 bzfberth Exp $"
 
 /**@file   heur_mutation.c
  * @ingroup PRIMALHEURISTICS
@@ -353,9 +354,7 @@ SCIP_DECL_HEUREXEC(heurExecMutation)
 
    SCIP_Bool success;     
 
-#ifdef NDEBUG
-   SCIP_RETCODE retstat;
-#endif
+   SCIP_RETCODE retcode;
 
    assert( heur != NULL );
    assert( scip != NULL );
@@ -515,19 +514,19 @@ SCIP_DECL_HEUREXEC(heurExecMutation)
    SCIP_CALL( SCIPsetObjlimit(subscip, cutoff) );
 
    /* solve the subproblem */
-   /* Errors in the LP solver should not kill the overall solving process, if the LP is just needed for a heuristic.
-    * Hence in optimized mode, the return code is catched and a warning is printed, only in debug mode, SCIP will stop.
+   SCIPdebugMessage("Solve Mutation subMIP\n");
+   retcode = SCIPsolve(subscip);
+   
+   /* Errors in solving the subproblem should not kill the overall solving process 
+    * Hence, the return code is catched and a warning is printed, only in debug mode, SCIP will stop.
     */
-#ifdef NDEBUG
-   retstat = SCIPsolve(subscip);
-   if( retstat != SCIP_OKAY )
+   if( retcode != SCIP_OKAY )
    { 
-      SCIPwarningMessage("Error while solving subMIP in mutation heuristic; subSCIP terminated with code <%d>\n",
-         retstat);
-   }
-#else
-   SCIP_CALL( SCIPsolve(subscip) );
+#ifndef NDEBUG
+      SCIP_CALL( retcode );     
 #endif
+      SCIPwarningMessage("Error while solving subproblem in Mutation heuristic; subSCIP terminated with code <%d>\n",retcode);
+   }
    
    heurdata->usednodes += SCIPgetNNodes(subscip);
 
