@@ -123,6 +123,7 @@ fixed bugs:
 - fixed bug in DINS w.r.t. column generation
 - fixed bug in heur_subnlp.c where wrong constraints forbidding variable fixations where added in case of general integers
 - fixed bug in var.c where a possible multiaggregation was resolved to an aggregation but the variables types were not checked to prefer more general types for aggregating; possible memory loss removed
+- fixed behavior of LNS heuristics when the subproblem aborts: continue in optimized mode, stop in debug mode
 
 
 performance improvements:
